updating jumpstart with some foundation 5 ish

--- a/index.html
+++ b/index.html
@@ -4,18 +4,20 @@
 
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
+  <meta name="viewport" content="initial-scale=1.0" />
+
   <title>Jumpstart</title>
 
   <link rel="stylesheet" href="/assets/styles/css/app.css">
   <script src="/assets/scripts/vendor/vendor/custom.modernizr.js"></script>
+
 </head>
+
 <body>
 
   <div class="row">
     <div class="large-12 columns">
-      <h2>Welcome to Foundation</h2>
-      <hr />
+      <h2 class="subheader">Welcome to Foundation 5!</h2>
     </div>
   </div>
 
