--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
   <title>Jumpstart</title>
 
   <link rel="stylesheet" href="/assets/styles/css/app.css">
-  <script src="/assets/scripts/vendor/vendor/custom.modernizr.js"></script>
 
 </head>
 
@@ -93,7 +92,7 @@
     </div>
   </div>
 
-  <script data-main="/assets/scripts/main.js" src="/assets/scripts/vendor/require.js"></script>
+  <script src="/assets/scripts/built/scripts.js"></script>
 
 </body>
 </html>
