Bunch of stuff - different template init strategy (plain ole script tag) - Changed grunt to include vendor after bower - type mixins - modularized sass - naming convention stuffs

--- a/httpdocs/index.html
+++ b/httpdocs/index.html
@@ -92,6 +92,10 @@
     </div>
   </div>
 
+  <script>
+    var template = 'home';
+  </script>
+
   <script src="/assets/scripts/built/scripts.js"></script>
 
 </body>
