Livereload works - reloads grunt file. - watch now calls compass

--- a/httpdocs/index.html
+++ b/httpdocs/index.html
@@ -10,6 +10,9 @@
 
   <link rel="stylesheet" href="/assets/styles/css/app.css">
 
+  <!--LR plugin, remove in production-->
+  <script src="http://localhost:35729/livereload.js"></script>
+
 </head>
 
 <body>
