--- a/httpdocs/index.html
+++ b/httpdocs/index.html
@@ -8,7 +8,7 @@
 
   <title>Jumpstart</title>
 
-  <link rel="stylesheet" href="/assets/styles/css/app.css">
+  <link rel="stylesheet" href="./assets/styles/css/app.css">
 
   <!--LR plugin, remove in production-->
   <script src="http://localhost:35729/livereload.js"></script>
@@ -99,7 +99,7 @@
     var template = 'home';
   </script>
 
-  <script src="/assets/scripts/built/scripts.js"></script>
+  <script src="./assets/scripts/built/scripts.js"></script>
 
 </body>
 </html>
