--- a/httpdocs/index.html
+++ b/httpdocs/index.html
@@ -8,10 +8,57 @@
 
   <title>Jumpstart</title>
 
-  <link rel="stylesheet" href="./assets/styles/css/app.css">
+  <link rel="stylesheet" href="./assets/styles/css/app.min.css">
 
   <!--LR plugin, remove in production-->
   <script src="http://localhost:35729/livereload.js"></script>
+
+  <meta charset="utf-8">
+  <meta name="viewport" content="initial-scale=1.0" />
+  <meta name="description" content="" />
+  <meta name="keywords" content="" />
+  <meta name="robots" content="index,follow,archive">
+
+  <!-- Analytics -->
+  <!--
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-XXXXXXXX-XX', {
+      'cookieDomain': 'none'
+    });
+    ga('send', 'pageview');
+  </script>
+  -->
+
+  <!-- Social Embeds -->
+  <!-- article page -->
+  <!--
+  <meta property="og:description" content="<?php echo $page->intro() ?>"/>
+  <meta property="og:image" content="http://authenticff.com/assets/images/logo.png">
+  <meta property="og:title" content="<?php echo $page->title() ?> | Authentic Form &amp; Function">
+  <meta property="og:url" content="<?php echo $page->url() ?>">
+  <meta property="og:site_name" content="Authentic Form &amp; Function">
+  <meta property="og:type" content="article">
+  -->
+
+  <!-- default page -->
+  <!--
+  <meta property="og:description" content="Whether you’re in startup mode aiming to launch your app, or an agency looking for a hand, we can apply our process to help you concept, build, and execute a variety of digital products."/>
+  <meta property="og:image" content="http://authenticff.com/assets/images/logo.png">
+  <meta property="og:title" content="Authentic Form &amp; Function">
+  <meta property="og:url" content="<?php echo $page->url() ?>">
+  <meta property="og:site_name" content="Authentic Form &amp; Function">
+  <meta property="og:type" content="website">
+
+  <meta name="twitter:site" content="@authenticff">
+  <meta name="twitter:creator" content="@https://twitter.com/authenticff">
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:url" content="http://authenticff.com/">
+  -->
 
 </head>
 
