Update jumpstart documentation

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,8 @@
 
   <title>Jumpstart</title>
 
-  <link rel="stylesheet" href="/assets/styles/css/app.css?v={{ craft.config.cacheBustValue }}">
+  <!-- <link rel="stylesheet" href="/assets/styles/css/app.css?v={{ craft.config.cacheBustValue }}"> -->
+  <link rel="stylesheet" href="/assets/styles/css/app.css">
 
   <!--LR plugin, remove in production-->
   <script src="http://localhost:35729/livereload.js"></script>
@@ -227,7 +228,8 @@
   </script>
   <!-- end Foundation content -->
 
-  <script src="/assets/scripts/built/scripts.js?v={{ craft.config.cacheBustValue }}"></script>
+  <!-- <script src="/assets/scripts/built/scripts.js?v={{ craft.config.cacheBustValue }}"></script> -->
+  <script src="/assets/scripts/built/scripts.js"></script>
 
 </body>
 </html>
