--- a/public/index.html
+++ b/public/index.html
@@ -7,18 +7,23 @@
   <meta name="viewport" content="initial-scale=1.0" />
 
   <title>Jumpstart</title>
-
-  <!-- <link rel="stylesheet" href="/assets/styles/css/app.css?v={{ craft.config.cacheBustValue }}"> -->
-  <link rel="stylesheet" href="/assets/styles/css/app.css">
-
   <meta charset="utf-8">
   <meta name="viewport" content="initial-scale=1.0" />
   <meta name="description" content="" />
   <meta name="keywords" content="" />
   <meta name="robots" content="index,follow,archive">
 
-  <!-- Analytics -->
-  <!--
+  <link rel="stylesheet" href="/assets/styles/css/app.css">
+
+  <!-- Styles
+  {% if craft.config.env == "live" %}
+    <link rel="stylesheet" href="{{ craft.bust.er('/assets/styles/css/app.min.css') }}">
+  {% else %}
+    <link rel="stylesheet" href="{{ craft.bust.er('/assets/styles/css/app.css') }}">
+  {% endif %}
+  -->
+
+  <!-- Analytics
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -30,32 +35,6 @@
     });
     ga('send', 'pageview');
   </script>
-  -->
-
-  <!-- Social Embeds -->
-  <!-- article page -->
-  <!--
-  <meta property="og:description" content="<?php echo $page->intro() ?>"/>
-  <meta property="og:image" content="http://authenticff.com/assets/images/logo.png">
-  <meta property="og:title" content="<?php echo $page->title() ?> | Authentic Form &amp; Function">
-  <meta property="og:url" content="<?php echo $page->url() ?>">
-  <meta property="og:site_name" content="Authentic Form &amp; Function">
-  <meta property="og:type" content="article">
-  -->
-
-  <!-- default page -->
-  <!--
-  <meta property="og:description" content="Whether you’re in startup mode aiming to launch your app, or an agency looking for a hand, we can apply our process to help you concept, build, and execute a variety of digital products."/>
-  <meta property="og:image" content="http://authenticff.com/assets/images/logo.png">
-  <meta property="og:title" content="Authentic Form &amp; Function">
-  <meta property="og:url" content="<?php echo $page->url() ?>">
-  <meta property="og:site_name" content="Authentic Form &amp; Function">
-  <meta property="og:type" content="website">
-
-  <meta name="twitter:site" content="@authenticff">
-  <meta name="twitter:creator" content="@https://twitter.com/authenticff">
-  <meta name="twitter:card" content="summary">
-  <meta name="twitter:url" content="http://authenticff.com/">
   -->
 
 </head>
@@ -230,7 +209,12 @@
   grunticon(["/assets/icons/built/icons.data.svg.css", "/assets/icons/built/icons.data.png.css", "/assets/icons/built/icons.fallback.css"], grunticon.svgLoadedCallback);
   </script>
 
-  <!-- <script src="/assets/scripts/built/scripts.js?v={{ craft.config.cacheBustValue }}"></script> -->
+  <!-- {% if craft.config.env == "live" %}
+    <script src="{{ craft.bust.er('/assets/scripts/built/built.js') }}"></script>
+  {% else %}
+    <script src="{{ craft.bust.er('/assets/scripts/built/scripts.js') }}"></script>
+  {% endif %} -->
+
   <script src="/assets/scripts/built/scripts.js"></script>
 
 </body>
